--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -88,16 +88,10 @@
     "ideal": "Ideal para requerentes com recusas anteriores que buscam suporte completo de reaplicação preparado por advogado. Inclui tudo o que está na camada 1, além de",
     "description": "Serviços adicionais estão disponíveis para ambos os pacotes",
     "features": [
-      "DS-160 preparado ou revisado por advogado.",
-"Montagem de todos os documentos de apoio:",
+      "DS-160 preparada ou recusada por um advogado.",
+"Montagem de documentação de apoio:",
 "Verificação de emprego ou renda",
-"Extratos bancários, bens, vínculos familiares",
-"Itinerário de viagem, carta-convite (se aplicável)",
-"Carta de apresentação elaborada por advogado",
-"Explique o motivo da nova solicitação",
-"Destaca os laços fortes e a intenção de retornar",
-"Demonstra conformidade com o §214(b)",
-"Lista de verificação final antes de agendar uma entrevista"
+"Eextratos bancários, bens, vínculos familiares, itinerários de viagem, carta convite (se aplicável), carta de apresentação elaborada por um advogado, explicação e motivo da nova solicitação, destaque de laços fortes com o Brasil e intenção de retorno, demonstração de conformidade com o $214(b) e lista de verificação final antes de agendar nova entrevista."
     ]
   },
   "disclaimer": "Todos os pagamentos são processados com segurança por meio dos sistemas de faturamento jurídico Clio Payments ou LawPay.",
