revisada word fix

--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -88,7 +88,7 @@
     "ideal": "Ideal para requerentes com recusas anteriores que buscam suporte completo de reaplicação preparado por advogado. Inclui tudo o que está na camada 1, além de",
     "description": "Serviços adicionais estão disponíveis para ambos os pacotes",
     "features": [
-      "DS-160 preparada ou recusada por um advogado.",
+      "DS-160 preparada ou revisada por um advogado.",
 "Montagem de documentação de apoio:",
 "Verificação de emprego ou renda",
 "Eextratos bancários, bens, vínculos familiares, itinerários de viagem, carta convite (se aplicável), carta de apresentação elaborada por um advogado, explicação e motivo da nova solicitação, destaque de laços fortes com o Brasil e intenção de retorno, demonstração de conformidade com o $214(b) e lista de verificação final antes de agendar nova entrevista."
